# panic_demo

./: .gitignore  README.md  chatbot.py  checker.py  gpt_utils.py  main.py  pyproject.toml  run_api.sh  run_chatbot.sh  run_model_server.sh
config/: example_config.json
src/: chatbot.py  logger.py  model.py  run_api.sh  run_model_server.sh
src/static/: script.js  style.css
src/templates/: index.html  loading.html
static/: script.js
